# Moer

./: .clang-format  .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  README.md  RunDebug.bat  RunSelfTest.bat  RunTesting.bat  SelfTest.sln  SelfTest.vcxproj  SelfTest.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  index.html  note.md  runAll.sh  下载 - 快捷方式.lnk
SelfTest/: CMakeLists.txt  Main.cpp  SelfTest.h
env-test/: CMakeLists.txt  main.cpp
ext/: CMakeLists.txt  README.md
ext/assimp/: CMakeLists.txt  defs.h  scene.h
ext/catch2/: CMakeLists.txt
ext/embree3/: CMakeLists.txt
ext/embree3/kernels/: config.h  embree.rc
ext/glfw/: CMakeLists.txt
ext/glfw/src/: CMakeLists.txt
ext/imgui/: CMakeLists.txt  imgui_impl_dx11.h  imgui_impl_glfw.cpp  imgui_impl_win32.h
ext/nanovdb/util/: IO.h
ext/pcg/: CMakeLists.txt  pcg_random.hpp  pcg_uint128.hpp
ext/stb/: CMakeLists.txt  stb.cpp
src/: CMakeLists.txt  brdfTest.cpp  main.cpp
src/BoundingBox/: BoundingBox.cpp
src/BxDF/: Dielectric.cpp  Dielectric.h  Diffuse.cpp  Diffuse.h  Microfacet.h  Mircofacet.cpp  Mirror.cpp  Mirror.h  TestBxDFLambert.cpp  TestBxDFLambert.h  TestMirrorBxdf.h
src/Camera/: Perspective.h  Pinhole.cpp  Pinhole.h  TestCamera.cpp  TestCamera.h  Thinlens.cpp
src/Color/: RGB3.cpp  Spectrum.cpp  XYZ3.cpp
src/Core/: Core.h  core.h  geometry.h
src/Core/CoreLayer/: BoundingBox.h  Color.h  Common.h  Geometry.h  Matrix.h
src/Core/FunctionLayer/: AccelerateNode.h  Accelerator.h  BSSRDF.h  BxDF.h  Camera.h  Entity.h  Film.h  Filter.h  Frame.h  Image.h  Integrator.h  Intersection.h  Light.h  Material.h  MemoryAllocator.h  MeshData.h  Ray.h  Sampler.h  Scene.h  Texture.h  Transform3d.h
src/Core/ResourceLayer/: Accelerator.h  BxDF.h  Entity.h  Film.h  Image.h  Integrator.h  Intersection.h  Material.h  MeshData.h  Ray.h  ResourceManager.h  Sampler.h  Scene.h  Texture.h  TileGenerator.h
src/CoreLayer/Adapter/: Attribute.h  JsonUtil.cpp  JsonUtil.h  JsonUtil.hpp  Random.h
src/CoreLayer/ColorSpace/: Color.h  RGB3.cpp  Spectrum.cpp  XYZ3.cpp
src/CoreLayer/Geometry/: Angle.cpp  Angle.h  BoundingBox.cpp  BoundingBox.h  CoordConvertor.cpp  CoordConvertor.h  Frame.h  Geometry.h  Matrix.cpp  Matrix.h  Normal.h  Point.h  Transform3d.cpp  Transform3d.h  Vector.h  normal.h  point.h  vector.h
src/CoreLayer/Math/: Common.h  LowDiscrepancy.cpp  LowDiscrepancy.h  Lowdiscrepancy.cpp  Lowdiscrepancy.h  Warp.h
src/CoreLayer/Ray/: Ray.cpp  Ray.h
src/CoreLayer/Scene/: Scene.cpp  Scene.h
src/Entity/: Sphere.cpp  Sphere.h
src/Film/: Film.cpp
src/FunctionLayer/: Intersection.h  TileGenerator.h
src/FunctionLayer/Acceleration/: Accel.h  Bvh.cpp  Bvh.h  Embree.cpp  Embree.h
src/FunctionLayer/Aggregate/: AccelerateNode.h  Accelerator.h  Bvh.cpp  Bvh.h
src/FunctionLayer/Camera/: Camera.h  CameraFactory.cpp  CameraFactory.h  DifferentialPinhole.cpp  DifferentialPinhole.h  Perspective.h  Pinhole.cpp  Pinhole.h  Thinlens.cpp  Thinlens.h  ToneMapping.cpp  ToneMapping.h
src/FunctionLayer/Distribution/: Distribution.cpp  Distribution.h
src/FunctionLayer/Film/: Film.cpp  Film.h  ToneMapping.h
src/FunctionLayer/Filter/: Filter.h
src/FunctionLayer/GaussianProcess/: GPFunctions.cpp  GPFunctions.h  GaussianProcess.cpp  GaussianProcess.h  GaussianProcessFactory.cpp  GaussianProcessFactory.h  GaussianProcessUtils.cpp  GaussianProcessUtils.h
src/FunctionLayer/Integrator/: AbstractPathIntegrator.cpp  AbstractPathIntegrator.h  BSSRDFIntegrator.cpp  BSSRDFIntegrator.h  GuidedPathIntegrator.cpp  GuidedPathIntegrator.h  Integrator.cpp  Integrator.h  MonteCarloIntegrator.cpp  MonteCarloIntegrator.h  NormalIntegrator.cpp  NormalIntegrator.h  PathIntegrator-new.cpp  PathIntegrator-new.h  PathIntegrator.cpp  PathIntegrator.h  PathIntegratorUtils.cpp  PathIntegratorUtils.h  VolPathIntegrator.cpp  VolPathIntegrator.h
src/FunctionLayer/Light/: AreaLight.cpp  AreaLight.h  DiffuseAreaLight.cpp  DiffuseAreaLight.h  InfiniteSphereCapLight.cpp  InfiniteSphereCapLight.h  InfiniteSphereLight.cpp  InfiniteSphereLight.h  Light.h  PointLight.cpp  PointLight.h
src/FunctionLayer/Material/: BSSRDFMaterial.cpp  BSSRDFMaterial.h  DisneyBSDF.cpp  (+31 more)
src/Geometry/: CoordConvertor.cpp  CoordConvertor.h  normal.h  point.h  ray.h  shape.h  vector.h
src/Image/: Image.cpp
src/Integrator/: AbstractPathIntegrator.cpp  AbstractPathIntegrator.h  Integrator.cpp  MonteCarlo.cpp  MonteCarlo.h  MonteCarloIntegrator.cpp  MonteCarloIntegrator.h  Path.cpp  Path.h  PathIntegrator.cpp  PathIntegrator.h  testPathIntegrator.cpp
src/Light/: AreaLight.cpp  AreaLight.h  DiffuseAreaLight.cpp  DiffuseAreaLight.h  PointLight.cpp  PointLight.h
src/Material/: DelectricMaterial.cpp  DelectricMaterial.h  Matte.cpp  Matte.h  MatteMaterial.cpp  MatteMaterial.h  MirrorMaterial.cpp  MirrorMaterial.h  TestMaterialLambert.cpp  TestMaterialLambert.h  TestMirror.cpp  TestMirror.h
src/Matrix/: Matrix.cpp
src/PlatformLayer/: README.md
src/Ray/: Ray.cpp
src/ResourceLayer/: ResourceManager.cpp  ResourceManager.h
src/Sampler/: DirectSampler.h
src/Scene/: Scene.cpp
src/Texture/: ImageTexture.cpp  ImageTexture.h  ProceduralTexture.cpp  ProceduralTexture.h  Texture.cpp  Texture.h  TextureCoord.h  TextureFunction.cpp  TextureFunction.h  TextureMapping.h
src/Transform/: Transform3d.cpp
test/: CMakeLists.txt  Testing.cmake
test/test-box/: CMakeLists.txt  Main.cpp
test/test-bvh/: CMakeLists.txt  Main.cpp
test/test-camera/: CMakeLists.txt  Main.cpp
test/test-env/: CMakeLists.txt  imgui_dx11_test.cpp  imgui_opengl3_test.cpp  main.cpp
test/test-integrator/: CMakeLists.txt  Main.cpp
test/test-integrator-validate/: CMakeLists.txt  Main.cpp
test/test-json-scene/: CMakeLists.txt  Main.cpp
test/test-materials/: CMakeLists.txt  Main.cpp
test/test-mesh/: CMakeLists.txt  Main.cpp
test/test-sampler/: CMakeLists.txt  Main.cpp
test/test-texture/: CMakeLists.txt  Main.cpp
test/test-tri_bvh/: CMakeLists.txt  Main.cpp
test/test-triangle/: CMakeLists.txt  Main.cpp
(+1770 files in other folders)
